# python-extractor-utils-rest

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  example_config.yaml  example_nested.py  mypy.ini  pyproject.toml  run_tests.sh
.github/workflows/: release.yaml  test_and_build.yml
cognite/extractorutils/rest/: __init__.py  authentiaction.py  authentication.py  extractor.py  http.py  types.py
tests/unit/: test_auth.py  test_config.yml  test_extractor.py  test_requests.py
