[tool.poetry]
name = "cognite-extractor-utils-rest"
version = "1.0.0a1"
description = "REST extention for the Cognite extractor-utils framework"
authors = ["Mathias Lohne <mathias.lohne@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/python-extractor-utils-rest"

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["arrow", "dacite", "prometheus_client", "psutil", "pytest", "requests", "retry", "yaml"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
cognite-extractor-utils = "^1.5.4"
requests = "^2.27.0"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
mypy = "*"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^2.2.0"
types-requests = "^2.26.0"
types-retry = "^0.9.2"
types-PyYAML = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
