[tool.poetry]
name = "cognite-extractor-utils-rest"
version = "0.2.3"
description = "REST extention for the Cognite extractor-utils framework"
authors = ["Mathias Lohne <mathias.lohne@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/python-extractor-utils-rest"

packages = [
    { include="cognite/extractorutils/rest", from="." },
]

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["arrow", "dacite", "requests"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cognite-extractor-utils = "^3.0.2"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
flake8 = "*"
pytest = "^6.2.5"
pytest-cov = "^2.8.1"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^2.19.0"
types-requests = "^2.26.0"
twine = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
